# EmuFlight

./: .codacy.yml  .coderabbit.yaml  .gitignore  .travis.sh  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  Notes-bmi270 files changed.txt  README.md  Vagrantfile  azure-pipelines.yml  bintray-conf.json  bintray-template.j2  bmi270mod.xlsx  build_docs.sh  downloads  sonar-project.properties  tools
.github/: FUNDING.yml  issue_template.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  configuration-issue.md  feature-request.md  feature-request.yml  firmware-bug-report.md  firmware-bug-report.yml  target-request.md
.github/instructions/: UNIT-TEST.instructions.md
.github/workflows/: Stale.yml  build.yml  ci.yml  release.yml  test-macos.yml  test.yml
docs/: Battery.md  Cli.md  FeedbackLinearization_notes.txt  Feedback_Linearization.md  LedStrip.md  Migrating from baseflight.md  Mixer.md  Modes.md  PID tuning.md  Profiles.md  Rx.md  Serial.md  Telemetry.md  gen_cli_docs.py
docs/CLI/: gyro_offset_yaw.md  parameters-reference.md
docs/Release Notes/: Betaflight 3.4 Release Notes.md
docs/Upgrading/: Upgrading from 3.2 to 3.3.md
docs/boards/: Board - STM32Discovery.md
docs/development/: CodingStyle.md  Development.md  Hardware Debugging.md  ParameterGroups.md
make/: freebsd.mk  linux.mk  macosx.mk  source.mk  system-id.mk  targets.mk  targets_list.mk  tools.mk  windows.mk
make/mcu/: SITL.mk  STM32F3.mk  STM32F4.mk  STM32F7.mk  (+1 more)
src/rustemu/: Cargo.toml  build.rs
src/rustemu/src/: lib.rs
tests/: test_invariant_stmbootloader.c
(+2936 files in other folders)
